NavLink component as ActiveLink for react-uicomp

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>react-uicomp</title>
+
+    <style>
+      .activeLink {
+        background: black;
+        color: white;
+      }
+    </style>
   </head>
 
   <body>
