--- a/example/public/index.html
+++ b/example/public/index.html
@@ -27,7 +27,7 @@
     <title>react-uicomp</title>
   </head>
 
-  <body>
+  <body style="background-color: #f8f8f8;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
