--- a/example/public/index.html
+++ b/example/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>react-uicomp</title>
+    <title>react-uicomp | Examples</title>
   </head>
 
   <body style="background-color: #f8f8f8;">
